--- a/cordova-app/www/index.html
+++ b/cordova-app/www/index.html
@@ -40,7 +40,7 @@
             <h1>Apache Cordova</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+                <p class="event received">Device is Ready YOUPI</p>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
